k8s/village-platform-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: village-platform-lb
  namespace: default
  labels:
    app: village-platform
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: village-frontend-working
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
